plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2' // 1. 안정적인 최신 3.x 버전으로 변경
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web' // 2. webmvc를 올바른 starter-web으로 변경
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// 3. 스프링 시큐리티
	implementation 'org.springframework.boot:spring-boot-starter-security'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'

	// 4. 테스트 라이브러리 정상화
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// JWT 관련 라이브러리 3형제
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// 1. Querydsl 의존성 추가 (jakarta 패키지 필수)
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
}

// 2. QueryDSL QClass 생성 경로 정의 (src/main/generated로 통일)
def querydslSrcDir = 'src/main/generated'

sourceSets {
	main.java.srcDirs += [ querydslSrcDir ]
}

// 빌드(컴파일) 시 해당 경로에 QClass 생성
tasks.withType(JavaCompile).configureEach {
	options.getGeneratedSourceOutputDirectory().set(file(querydslSrcDir))
}

// 3. gradle clean 시 생성된 QClass 디렉토리도 함께 삭제
clean {
	delete file(querydslSrcDir)
}

tasks.named('test') {
	useJUnitPlatform()
}
